2020 거꾸로캠퍼스

--- a/GSchool_website/clone_website/index ! .html
+++ b/GSchool_website/clone_website/index ! .html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="common.css">
 	<link rel="stylesheet" href="style.css">
 	<script src="script.js"></script>
-	<title>거꾸로 캠퍼스</title>
+	<title>2020 거꾸로 캠퍼스</title>
 </head>
 
 <body>
@@ -37,19 +37,19 @@
 						미래 사회에서 주체적인 삶을 살며 협력을 통해 긍정적인 변화를 이끄는 인재를 양성합니다.</div>
 					<div class="center-container">
 						<div id="case">
-							<div id="case1" style="background-color:#2C44AA">
+							<div id="case1" style="background-color:#BD2C32">
 								<strong>배움의 원칙</strong><br>
 								거꾸로캠퍼스가 실현하는<br>
 								21세기 배움의 원칙 아홉 가지<br><br><br><br>
 								<a href="">자세히 보기 ➝</a>
 							</div>
-							<div id="case2" style="background-color:#001355">
+							<div id="case2" style="background-color:#8A2C32">
 								<strong>교육과정</strong><br>
 								거꾸로캠퍼스의 교육 과정과<br>
 								교육 프로그램에 대한 안내<br><br><br><br>
 								자세히 보기 ➝
 							</div>
-							<div id="case3" style="background-color: #2C44AA">
+							<div id="case3" style="background-color: #BD2C32">
 								<strong>학교생활</strong><br>
 								거꾸로캠퍼스를 만들어가는<br>
 								학생과 교사들의 이야기<br><br><br><br>
@@ -126,7 +126,7 @@
 					</ul>
 				</div>
 			</main>
-			<footer id="footer" style="background-color: #001355;">
+			<footer id="footer" style="background-color: #5D0F0E;">
 				<div class="center-container">
 					<div id="box">
 						<div class="box1">
